# minishell

./: .gitmodules  CMakeLists.txt  Makefile  cd.c  cd_utils.c  command.h  doc.md  echo.c  env.c  env.h  env_utils.c  env_utils.h  executable.c  exit.c  export.c  file_utils.c  file_utils.h  force_remove_env.c  get_next_line.h  libft.h  main.c  move_env.c  permission.h  pwd.c  shell_status.c  shell_status.h  start_new_process.c  test_preprocessor.c  unset.c  update_env.c  variables.c  variables.h
builtin/: basic_shell.h  cd.c  cd_utils.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
env/: env.c  env_utils.c  env_utils.h  find_env.c  move_env.c  update_env.c
errors_printer/: error_printer.c  error_printer.h
file_utils/: executable.c  executable_1.c  executable_file_error.h  file_utils.c  file_utils.h  permission.h
ft_map/: ft_map.c  ft_map.h
ft_pair/: ft_pair.h
ft_vector/: ft_vector.c  ft_vector.h  ft_vector_2.c  ft_vector_3.c  ft_vector_4.c
main_functions/: clean_process_info.c  main_functions.c  main_functions.h  main_functions_1.c
pipes/: pipes.c  pipes.h
preprocessor/: preprocessor.c  preprocessor.h  preprocessor_1.c  preprocessor_2.c  preprocessor_3.c  preprocessor_4.c  preprocessor_loops.c
processes/: processes.c  processes.h  processes_1.c
redirection/: heredoc.c  redirection.c  redirection.h  redirection_1.c  redirection_2.c
rl/: chardefs.h  keymaps.h  readline.h  rlconf.h  rldefs.h  rlprivate.h  rlstdc.h  rltypedefs.h
shell_status/: shell_status.c  shell_status.h
signal/: signal.c  signal.h
signals/: signals_handler.c  signals_handler.h
